# manuscript-clusterer

./: .gitignore  README.md  pyproject.toml  test.ipynb
front/manuscript-clusterer-front/: package-lock.json  package.json
front/manuscript-clusterer-front/src/: App.vue  main.js
front/manuscript-clusterer-front/src/components/: HeatMap.vue  Index.vue  Projector.vue
front/manuscript-clusterer-front/src/pages/: comparator.vue  experimental.vue  index.vue  project.vue
src/manuscript_clusterer/api/: app.py
src/manuscript_clusterer/api/database/: db_manipulator.py  fill_database.py
src/manuscript_clusterer/api/database/datasets/: classification.csv
src/manuscript_clusterer/api/models/: manuscript.py  settings.py
src/manuscript_clusterer/api/routers/: __init__.py  manuscript.py  manuscripts.py  transform_manuscripts.py
src/manuscript_clusterer/engine/: __init__.py  cluster.py  get_profiles.py  project.py  utils.py
src/manuscript_clusterer/engine/data/: profile_rules.csv
tests/: test_clustering.py  test_compute_profile.py  test_fill_database.py
